--- a/aula_bootstrap/index.html
+++ b/aula_bootstrap/index.html
@@ -7,6 +7,9 @@
     <title>Minha página</title>
     <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@900&family=Fira+Code:wght@500&display=swap"
+        rel="stylesheet">
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light">
@@ -16,13 +19,13 @@
         <div class="collapse navbar-collapse">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Quem Somos</a>
+                    <a class="nav-link" href="#quemsomos">Quem Somos</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Parceiros</a>
+                    <a class="nav-link" href="#parceiros">Parceiros</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Serviços</a>
+                    <a class="nav-link" href="#servicos">Serviços</a>
                 </li>
             </ul>
         </div>
@@ -30,8 +33,54 @@
 
     <section class="quemsomos">
         <div class="container-fluid quem-somos text-center margin">
-            <p>Teste</p>
+            <h3 class="title margin">Quem Somos</h3>
+            <img src="img/jedi.webp" alt="vários Jedi erguendo seus sabres de luz" class="rounded-circle" width="420" height="420">
+            <p class="lead margin">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur, deleniti harum iusto cum temporibus corrupti inventore ut aliquid facilis accusantium dolorum aliquam aut ipsum. Ex vero rem libero mollitia perferendis?</p>
         </div>
     </section>
+
+    <section class="parceiros">
+        <div class="container-fluid text-center parceiros">
+            <h3 class="title margin">Parceiros</h3>
+            <div class="row">
+                <div class="col-lg-4">
+                    <img src="img/chancellor-supreme.png" alt="Supremo Chanceler" class="rounded-circle" width="250px" height="250px">
+                    <h3 class="subtitle margin">República Galática</h3>
+                </div>
+                <div class="col-lg-4">
+                    <img src="img/banking-clan.png" alt="Clã Bancário" class="rounded-circle" width="250px" height="250px">
+                    <h3 class="subtitle margin">Clã Bancário</h3>
+                </div>
+                <div class="col-lg-4">
+                    <img src="img/the-senate.png" alt="Senadora Padmé Amidala" class="rounded-circle" width="250px" height="250px">
+                    <h3 class="subtitle margin">Senado Galático</h3>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="servicos">
+        <div class="container-fluid text-center servicos">
+            <h3 class="title margin">Serviços</h3>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-6">
+                        <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto impedit perspiciatis nemo repudiandae, magni necessitatibus, commodi asperiores laboriosam dolores voluptatum velit aut expedita sit ea doloremque. Facere nulla doloremque debitis!</p>
+                        <img src="img/teaching.png" alt="Treinamento Jedi" width="100%" class="margin">
+                    </div>
+                    <div class="col-lg-6">
+                        <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto impedit perspiciatis nemo repudiandae, magni necessitatibus, commodi asperiores laboriosam dolores voluptatum velit aut expedita sit ea doloremque. Facere nulla doloremque debitis!</p>
+                        <img src="img/war.png" alt="Combate contra o mau" width="100%" class="margin">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <footer class="container-fluid text-center margin">
+        <h3 class="subtitle margin">
+            Desenvolvido por <a href="https://github.com/elanonc">Elano N. Caitano</a>
+         </h3>
+    </footer>
 </body>
 </html>
